=====================
[1790286] All String preferences stored within the database are now 
correctly read during database open
[1791482] All preferences stored within the database are now exported/imported
via XML
[1793224] Copy for expired passwords no longer causes PWS crashes
[1789983] List View now correct after Group removed
[1313440] Can new add/edit entries with long group names

New Features for 3.10.01
========================
[1765240] Add "Clear clipboard" item to tray icon context menu
[1727768] Copy URL to clipboard added to menus (Ctrl+Alt+L)
[1790342] Allow Ctrl+Alt+E(xpand) or Ctrl+Alt+C(ollapse) instead of
Ctl-Alt-+/- key shortcuts (useful for laptops with smaller keyboards)
[1526169] Add shortcut keys to add/edit dialog  

Changes to Existing Features in 3.10.01
=======================================
[] Saved string preferences within the database header will not be delimited by 
a doublequote if this character is part of the string variable.  An arbitrary
symbol type character will be used in this case.  If one cannot be found, the
string preference will not be saved in the database.

Bugs fixed in 3.10
==================
[1757110] Toolbar now correctly disables images according to type of entry
selected and if URL is populated
[1758025, 1759364] '-s' option now works correctly
[] Window's position and size now updated correctly
[1768822] Manage->Options->Password History 'apply' works again.
[] Lock timeout after manual lock no longer saves empty database.
[1754566] State of tree view is now persistent across minimize, lock &
save.
[1771357] Timeout timer now reset in all dialog boxes - PasswordSafe
will no longer minimize in the middle of work with an open dialog box.
[1754054, 1754611, 1740704] Items are now fully sorted when "put groups first
in display tree" selected.
[1757298, 1774428, 1609474] Merge no longer loses data
[] Ensure group/title/user combination is unique during text import.